try changing header

--- a/perfil.html
+++ b/perfil.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="profile.css">
+    <link rel="stylesheet" href="common.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500&family=Work+Sans:ital,wght@0,500;0,800;1,200&display=swap" rel="stylesheet">
@@ -38,13 +39,13 @@
                 <section class="box candidate-contracts">
                     <div>
                         <p style="text-align: left;">Contratos en año de elecciones:</p>
-                        <button class="button-open" id="open-dialog" style="display: block; margin: 0 auto;">86 Contratos</button>
+                        <button class="button-open" id="open-contratos-elecciones" style="display: block; margin: 0 auto;">86 Contratos</button>
                     </div>
                     <div>
                         <p style="text-align: left;">Contratos simultáneos:</p>
-                        <button class="button-open" style="display: block; margin: 0 auto;">13 Contratos</button>
+                        <button class="button-open" id="open-contratos-simultaneos" style="display: block; margin: 0 auto;">13 Contratos</button>
                     </div>
-                    <button class="button" style="display: block; margin: 0 auto;">Consultar contratos por entidades</button>
+                    <button class="button"  id="open-contratos-entidades" style="display: block; margin: 0 auto;">Consultar contratos por entidades</button>
                 </section>
                 
             </div>
@@ -58,7 +59,7 @@
         <section class="box long">
             <p class="message">Recopilamos algunas noticias sobre el candidato y esto es lo que sabemos:</p></button>
         </section>
-        <button class="button" style="display: block; margin: 0 auto;">Consultar fuente</button>
+        <button class="button" id="open-noticias" style="display: block; margin: 0 auto;">Consultar fuente</button>
 
     </div>
 </main>
