--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                 </fieldset>
 
         
-                <input type="submit" value="Enviar">
+                <button id="open-new-tab">Consultar candidato</button>
             </form>
         </div>
         
