--- a/perfil.html
+++ b/perfil.html
@@ -19,7 +19,7 @@
     <main>
     <div class="card">
         <div class="candidate-name">
-            <h1>HUGO ANDRES CARDOSO RUEDA</h1></div>
+            <h1 id="nombre_candidato"></h1></div>
         <div class="candidate-info">
             <p>Santander - Asamblea - Municipio
                 Partido o movimiento político - Partido centro democrático</p>
@@ -69,7 +69,7 @@
 <div class="dialog-box" id="dialog-box">
     <span class="close-button" id="close-button">X</span>
     <!-- Content goes here -->
-    <p>This is the information stored in a variable. It can be any text or data you want to display.</p>
+    <p id="dialog-space">This is the information stored in a variable. It can be any text or data you want to display.</p>
 </div>
 
 
