Header y tabla info perfil

--- a/perfil.html
+++ b/perfil.html
@@ -5,24 +5,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="profile.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500&family=Work+Sans:ital,wght@0,500;0,800;1,200&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500&family=Roboto:wght@300&family=Work+Sans:ital,wght@0,500;0,800;1,200&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500&family=Work+Sans:ital,wght@0,500;0,800;1,200&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500&family=Roboto:wght@300&family=Work+Sans:ital,wght@0,500;0,800;1,200&display=swap" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <title>Candidate Profile</title>
 </head>
 <body>
-    <div class="header">
-        <h2 class="header_text">VOTO INFORMADO</h2></div>
+    <header>
+        <div class="header">
+            <h1 id="titulo">Radiografía electoral Colombia</h1>
+        </div>
+    </header>
     <main>
     <div class="card">
         <div class="candidate-name">
-            <h1>HUGO ANDRES CARDOSO RUEDA</h1></div>
-        <div class="candidate-info">
+            <h1>HUGO ANDRES CARDOSO RUEDA</h1>
+        </div>
+        <div style="padding-left: 10px;">
+            <table >
+                <tr>
+                    <td style="width: 150px; font-weight: bold;">Departamento:</td>
+                    <td>Nombre del Departamento</td>
+                </tr>
+                <tr>
+                    <td style="width: 150px; font-weight: bold;">Cargo:</td>
+                    <td>Nombre del Cargo</td>
+                </tr>
+                <tr>
+                    <td style="width: 150px; font-weight: bold;">Municipio:</td>
+                    <td>Nombre del Municipio</td>
+                </tr>
+                <tr>
+                    <td style="width: 150px; font-weight: bold;">Partido Político:</td>
+                    <td>Nombre del Partido</td>
+                </tr>
+            </table>
+        </div>
+<!--         <div class="candidate-info">
             <p>Santander - Asamblea - Municipio
                 Partido o movimiento político - Partido centro democrático</p>
-        </div>
+        </div> -->
         
         <div class="cards-wrapper">
             <div class="box-section">
