--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DarkArmy</title>
     <link rel="stylesheet" href="style.css">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 </head>
 <body>
     <header>
         <div class="header">
-            <h1 id="titulo">DarkArmy</h1>
+            <h1 id="titulo">Radiografía electoral Colombia</h1>
         </div>
     </header>
 
