--- a/perfil.html
+++ b/perfil.html
@@ -82,9 +82,18 @@
             <p class="message">lo que el internet sabe sobre este candidato</p>
         </div> 
         <section class="box long">
-            <p class="message">Recopilamos algunas noticias sobre el candidato y esto es lo que sabemos:</p></button>
+            <p class="message">Recopilamos algunas noticias sobre el candidato y esto es lo que sabemos:</p>
+            <div class="loading-icon">
+                <div class="dots">
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                </div>
+                <p class="loading-text">Navegando la web</p>
+            </div>
+            <p class="message response" style="display: none;">Respuesta</p>
         </section>
-        <button class="button" id="open-noticias" style="display: block; margin: 0 auto;">Consultar fuente</button>
+        <button class="button" id="open-fuentes" style="display: block; margin: 0 auto;">Consultar fuente</button>
 
     </div>
 </main>
