--- a/perfil.html
+++ b/perfil.html
@@ -23,7 +23,7 @@
     <main>
     <div class="card">
         <div class="candidate-name">
-            <h1 id="nombre_candidato">HUGO ANDRES CARDOSO RUEDA</h1>
+            <h1 id="nombre_candidato">Cargando nombre del candidato...</h1>
         </div>
         <div style="padding-left: 10px;">
             <table >
@@ -64,11 +64,11 @@
                 <section class="box candidate-contracts">
                     <div>
                         <p style="text-align: left;">Contratos en año de elecciones:</p>
-                        <button class="button-open" id="open-contratos-elecciones" style="display: block; margin: 0 auto;">86 Contratos</button>
+                        <button class="button-open" id="open-contratos-elecciones" style="display: block; margin: 0 auto;">Cargando...</button>
                     </div>
                     <div>
                         <p style="text-align: left;">Contratos simultáneos:</p>
-                        <button class="button-open" id="open-contratos-simultaneos" style="display: block; margin: 0 auto;">13 Contratos</button>
+                        <button class="button-open" id="open-contratos-simultaneos" style="display: block; margin: 0 auto;">Cargando...</button>
                     </div>
                     <button class="button"  id="open-contratos-entidades" style="display: block; margin: 0 auto;">Consultar contratos por entidades</button>
                 </section>
