--- a/perfil.html
+++ b/perfil.html
@@ -7,45 +7,49 @@
     <link rel="stylesheet" href="common.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500&family=Work+Sans:ital,wght@0,500;0,800;1,200&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500&family=Roboto:wght@300&family=Work+Sans:ital,wght@0,500;0,800;1,200&display=swap" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500&family=Roboto+Slab:wght@700&family=Roboto:wght@300&family=Work+Sans:ital,wght@0,500;0,800;1,200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500&family=Roboto+Slab:wght@700&family=Roboto:wght@300&family=Work+Sans:ital,wght@0,300;0,400;0,500;0,700;0,800;1,200&display=swap" rel="stylesheet">
     <title>Candidate Profile</title>
 </head>
 <body>
     <header>
-        <div class="header">
-            <h1 id="titulo">Radiografía electoral Colombia</h1>
-        </div>
+            <div class="header-title">
+                <h1 id="titulo">Radiografía electoral Colombia</h1>
+                <h2 id="subtitulo">Elecciones locales 2023</h2>
+            </div>
+            <div class="header-info">
+                <p>Esta página es la solución ganadora al Hackathon Co-Afina 2023</p>
+                <a href="#footer">Conoce más</a>
+            </div>
     </header>
     <main>
     <div class="card">
         <div class="candidate-name">
+            <h3>Candidato</h3>
             <h1 id="nombre_candidato">Cargando nombre del candidato...</h1>
         </div>
         <div style="padding-left: 10px;">
             <table >
                 <tr>
                     <td style="width: 150px; font-weight: bold;">Departamento:</td>
-                    <td id="tbDepartamento">Nombre del Departamento</td>
+                    <td id="tbDepartamento">...</td>
                 </tr>
                 <tr>
                     <td style="width: 150px; font-weight: bold;">Cargo:</td>
-                    <td id="tbCargo">Nombre del Cargo</td>
+                    <td id="tbCargo">...</td>
                 </tr>
                 <tr>
                     <td style="width: 150px; font-weight: bold;">Municipio:</td>
-                    <td id="tbMunicipio">Nombre del Municipio</td>
+                    <td id="tbMunicipio">...</td>
                 </tr>
                 <tr>
                     <td style="width: 150px; font-weight: bold;">Partido Político:</td>
-                    <td id="tbPartido">Nombre del Partido</td>
+                    <td id="tbPartido">...</td>
                 </tr>
             </table>
         </div>
-<!--         <div class="candidate-info">
+    <!--  <div class="candidate-info">
             <p>Santander - Asamblea - Municipio
                 Partido o movimiento político - Partido centro democrático</p>
         </div> -->
@@ -53,31 +57,31 @@
         <div class="cards-wrapper">
             <div class="box-section">
                 <h3>HISTORIAL</h3>
+                <p class="info_extra">Fuente: Registraduría Nacional - Centro de Estudios y Asuntos Electorales (<a href="https://www.registraduria.gov.co/">CEDAE</a>)</p>
                 <section class="box candidate-history">
                     <p class="message">Candidaturas previas de este candidato:</p>
-                    <!-- <button>Ver detalle</button> -->
+                    <div id="contenido_candidaturas">Cargando...</div>
                 </section>
             </div>
 
             <div class="box-section">
                 <h3>CONTRATOS</h3>
+                <p class="info_extra">Fuente: Datos abiertos Sistema Electrónico de Contratación Pública SECOP (<a href="https://www.datos.gov.co/Gastos-Gubernamentales/SECOP-I-Procesos-de-Compra-P-blica/f789-7hwg/ ">version I</a> y <a href="https://www.datos.gov.co/Gastos-Gubernamentales/SECOP-II-Contratos-Electr-nicos/jbjy-vk9h/">version II</a>)</p>
                 <section class="box candidate-contracts">
                     <div>
-                        <p style="text-align: left;">Contratos en año de elecciones:</p>
+                        <p class="message" style="text-align: left;">Contratos públicos vigentes en octubre 30 de 2022 o fecha posterior</p>
                         <button class="button-open" id="open-contratos-elecciones" style="display: block; margin: 0 auto;">Cargando...</button>
                     </div>
                     <div>
-                        <p style="text-align: left;">Contratos simultáneos:</p>
+                        <p class="message" style="text-align: left;">Contratos públicos que ha firmado antes de Octubre 30 de 2023</p>
                         <button class="button-open" id="open-contratos-simultaneos" style="display: block; margin: 0 auto;">Cargando...</button>
                     </div>
-                    <button class="button"  id="open-contratos-entidades" style="display: block; margin: 0 auto;">Consultar contratos por entidades</button>
                 </section>
-                
             </div>
             
         </div>
     </div>
-    <div class="box-section chatsection">                
+<!--     <div class="box-section chatsection">                
         <div class="inline-info"><h3>NOTICIAS</h3>
             <p class="message">lo que el internet sabe sobre este candidato</p>
         </div> 
@@ -95,7 +99,7 @@
         </section>
         <button class="button" id="open-fuentes" style="display: block; margin: 0 auto;">Consultar fuente</button>
 
-    </div>
+    </div> -->
 </main>
 
 
@@ -103,8 +107,43 @@
 <div class="dialog-box" id="dialog-box">
     <span class="close-button" id="close-button">X</span>
     <!-- Content goes here -->
-    <p id="dialog-space">This is the information stored in a variable. It can be any text or data you want to display.</p>
+    <p id="dialog-space"></p>
 </div>
+
+
+<footer id="footer">
+    <div class="footer_container">
+
+        <div class="section_footer">
+            <p class="section_footer_title">QUIENES SOMOS</p>
+            <p>Somos un grupo de estudiantes ganadores del <a href="">Hackathon Co-Afina de LaConga Physics 2023</a></p>
+            <br>
+            <p>En alianza con la Red Data Quorum decidimos lanzar esta página web al público</p>
+            <br>
+            <p class="section_footer_title">CONTÁCTANOS</p>
+            <p>darkarmy_equipo@gmail.com</p>
+        </div>
+
+        <div class="section_footer">
+            <p class="section_footer_title">APOYANOS</p>
+            <p>Con tu ayuda podemos seguir mejorando esta página ofreciendo más información para el voto informado</p>
+            <br>
+            <div class="vaki">
+            </div>
+            <button class="button-callto" style="display: block; margin: 0 auto;">Donar en Vaki</button>
+
+        </div>
+        <div class="section_footer">
+            <div class="laconga">
+
+            </div>
+            <div class="red">
+
+            </div>
+        </div>
+    </div>
+
+</footer>
 
 
 <script src="profile.js"></script>
